styles/global.css
/*
  Lesson Content
*/

.lesson-content h1 {
  @apply mt-2 block text-center text-3xl font-extrabold leading-8 tracking-tight text-gray-900;
}

/*
  Modal for screenshots
*/

#modal {
  display: none;
  position: fixed;
  z-index: 99;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgba(0, 0, 0, 0.5);
}

/* Modal Content/Box */
.modal-content {
  background-color: white;
  margin: 20px auto;
  padding: 20px;
  width: 90%;
}

/* The Close Button */
.close {
  color: #aaa;
  float: right;
  font-size: 35px;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}

/*
  Removes backticks `` from being redered
  for inline code in markdown files
*/
.prose code::before,
.prose code::after {
  content: "";
}

.prose img {
  cursor: pointer;
  border: 1px solid rgba(0, 0, 0, 0.15);
}

/*
  Doc Search
*/

input[type="search"]:focus {
  --tw-ring-color: none;
}

/*
  Lesson Page Sidebar
*/

.pro-sidebar {
  width: 100% !important;
}

.pro-sidebar .pro-arrow-wrapper {
  display: none;
}

.pro-sidebar > .pro-sidebar-inner {
  background: #ffffff !important;
}

.pro-sidebar .pro-sub-menu.open {
  color: #007780 !important;
}

.pro-sidebar .pro-sub-menu.open a {
  color: #007780 !important;
  background: #f3f4fa;
  border-radius: 40px;
  padding: 20px 10px;
}

.pro-sidebar .pro-menu .pro-menu-item > .pro-inner-item > .pro-item-content {
  overflow: visible !important;
  white-space: inherit !important;
}

/*
  Admonitions
  https://github.com/elviswolcott/remark-admonitions
*/

.admonition {
  margin-bottom: 1em;
  padding: 15px 30px 15px 15px;
}

.admonition h5 {
  margin-top: 0;
  margin-bottom: 8px;
  text-transform: uppercase;
}

.admonition-icon {
  display: inline-block;
  vertical-align: middle;
  margin-right: 0.2em;
}

.admonition-icon svg {
  display: inline-block;
  width: 22px;
  height: 22px;
  stroke-width: 0;
}

.admonition-content > :last-child {
  margin-bottom: 0;
}

/* default for custom types */
.admonition {
  background-color: rgba(118, 51, 219, 0.1);
  border-left: 8px solid #7633db;
}

.admonition h5 {
  color: #7633db;
}

.admonition .admonition-icon svg {
  stroke: #7633db;
  fill: #7633db;
}

/** native types */
.admonition-caution {
  background-color: rgba(230, 126, 34, 0.1);
  border-left: 8px solid #e67e22;
}

.admonition-caution h5 {
  color: #e67e22;
}

.admonition-caution .admonition-icon svg {
  stroke: #e67e22;
  fill: #e67e22;
}

.admonition-tip {
  background-color: rgba(46, 204, 113, 0.1);
  border-left: 8px solid #2ecc71;
}

.admonition-tip h5 {
  color: #2ecc71;
}

.admonition-tip .admonition-icon svg {
  stroke: #2ecc71;
  fill: #2ecc71;
}

.admonition-warning {
  background-color: rgba(231, 76, 60, 0.1);
  border-left: 8px solid #e74c3c;
}

.admonition-warning h5 {
  color: #e74c3c;
}

.admonition-warning .admonition-icon svg {
  stroke: #e74c3c;
  fill: #e74c3c;
}

.admonition-important {
  background-color: rgba(52, 152, 219, 0.1);
  border-left: 8px solid #3498db;
}

.admonition-important h5 {
  color: #3498db;
}

.admonition-important .admonition-icon svg {
  stroke: #3498db;
  fill: #3498db;
}

.admonition-note {
  background-color: rgba(241, 196, 15, 0.1);
  border-left: 8px solid #f1c40f;
}

.admonition-note h5 {
  color: #f1c40f;
}

.admonition-note .admonition-icon svg {
  stroke: #f1c40f;
  fill: #f1c40f;
}

/* hides the osano widget */
.osano-cm-widget {
  display: none;
}

